[gd_scene load_steps=2 format=2]

[ext_resource path="res://game_behavior/objects_blacksmithing/behavior/sensor_item.gd" type="Script" id=1]

[node name="sensor_item" type="Area2D" groups=["sensor"]]
script = ExtResource( 1 )

[node name="pos_item" type="Position2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_sensor_item_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_sensor_item_area_exited"]
[connection signal="input_event" from="." to="." method="_on_sensor_item_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_sensor_item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_sensor_item_mouse_exited"]
